# ccost

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TASKS.md  install.sh  test_install.sh  test_install_comprehensive.sh  test_install_dryrun.sh
.github/workflows/: ci.yml  release.yml
migrations/: 001_initial.sql
pricing/: models.json
src/: lib.rs  main.rs
src/alerts/: mod.rs  notifications.rs  patterns.rs  system.rs  thresholds.rs
src/analysis/: conversations.rs  mod.rs  optimization.rs  projects.rs  timeline.rs  timezone.rs  usage.rs
src/cli/: args.rs  mod.rs
src/commands/: config.rs  conversations.rs  daily.rs  mod.rs  pricing.rs  projects.rs  this_month.rs  this_week.rs  timeframe_utils.rs  today.rs  usage.rs  watch.rs  yesterday.rs
src/config/: mod.rs  settings.rs
src/core/: mod.rs
src/models/: currency.rs  litellm.rs  mod.rs  pricing.rs
src/output/: export.rs  mod.rs  table.rs
src/parser/: conversation.rs  deduplication.rs  jsonl.rs  mod.rs
src/storage/: migrations.rs  mod.rs  sqlite.rs
src/sync/: export_import.rs  mod.rs
src/utils/: date_format.rs  filters.rs  mod.rs  privacy.rs
src/watch/: dashboard.rs  events.rs  file_watcher.rs  mod.rs  session.rs  simple_watch.rs  text_selection.rs  watch_mode.rs
tests/: integration_pricing.rs
