[package]
name = "ccost"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "ccost"
path = "src/main.rs"

[dependencies]
# Core CLI framework
clap = { version = "4.0", features = ["derive"] }

# Dependencies for future tasks (will be used in later implementations)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tabled = "0.15"
toml = "0.8"
sha2 = "0.10"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }


[dev-dependencies]
tempfile = "3.0"
